Fixed Tree alignment, simplified CSS

--- a/all.css
+++ b/all.css
@@ -68,10 +68,10 @@ li.file{
 }
 
 li label{
-  background: url(treeImages/folder-horizontal.png) 15px 1px no-repeat;
+  background: url(treeImages/folder-horizontal.png) 13px 0px no-repeat;
   cursor: pointer;
   display: block;
-  padding-left: 37px;
+  padding-left: 33px;
 }
 
 li input{
@@ -87,8 +87,8 @@ li input{
 }
 
 li input + ol{
-  background: url(treeImages/toggle-small-expand.png) 40px 0 no-repeat;
-  margin: -0.938em 0 0 -44px; /* 15px */
+  background: url(treeImages/toggle-small-expand.png) 40px 0px no-repeat;
+  margin: -1.25em 0 .5em -44px;
   height: 1em;
 }
 
@@ -96,9 +96,9 @@ li input + ol > li { display: none; margin-left: -14px !important; padding-left:
 
 li input:checked + ol
 {
-  background: url(treeImages/toggle-small.png) 40px 5px no-repeat;
-  margin: -1.25em 0 0 -44px; /* 20px */
-  padding: 1.563em 0 0 80px;
+  background: url(treeImages/toggle-small.png) 40px 0px no-repeat;
+  margin: -1.25em 0 0 -44px;
+  padding: 1.563em 0 0 74px;
   height: auto;
 }
 
